created semantic tags in html file and added appropriate class attributes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <!-- header -->
+        <header class="section header">
+            <nav class="navbar">
+
+            </nav>
+        </header>
+    <!-- hero -->  
+        <section class="section hero">
+
+        </section>
+
+    <!-- about --> 
+        <section class="section about">
+
+        </section>
+
+    <!-- skills/services -->
+        <section class="section skill">
+
+        </section>
+
+    <!-- projects -->
+        <section class="section projects">
+
+        </section>
+
+    <!-- contact -->   
+        <section class=" section contact">
+
+        </section>
+
+    <!-- footer -->
+        <footer class="section footer">
+
+        </footer>
 </body>
 </html>
