--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <!-- header -->
         <header class="section header">
             <nav class="navbar">
-
+                <h1 id="logo">b</h1>
+                <ul class="nav-container">
+                    <li class="nav-item"><a href="" class="nav-link"></a>home</li>
+                    <li class="nav-item"><a href="" class="nav-link"></a>about</li>
+                    <li class="nav-item"><a href="" class="nav-link"></a>projects</li>
+                    <li class="nav-item"><a href="" class="nav-link"></a>contact</li>
+                </ul>
             </nav>
         </header>
     <!-- hero -->  
