--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
             <nav class="navbar">
                 <h1 id="logo">b</h1>
                 <ul class="nav-container">
-                    <li class="nav-item"><a href="" class="nav-link"></a>home</li>
-                    <li class="nav-item"><a href="" class="nav-link"></a>about</li>
-                    <li class="nav-item"><a href="" class="nav-link"></a>projects</li>
-                    <li class="nav-item"><a href="" class="nav-link"></a>contact</li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">about</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">contact</a>
+                    </li>
                 </ul>
             </nav>
         </header>
