added html structue for hero section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- header -->
-        <header class="section header">
+        <header>
             <nav class="navbar">
                 <h1 id="logo">b</h1>
                 <ul class="nav-container">
@@ -30,7 +30,14 @@
         </header>
     <!-- hero -->  
         <section class="section hero">
-
+            <div class="hero-container">
+                <h1 class="hero-heading">hi, <br> i'm bav kudhail</h1>
+                <p>I design and build things for the web and love what I do.</p>
+                <a href="#contact" class="btn hero-btn">say hello!</a>
+            </div>
+            <div class="hero-image">
+                <img src="https://via.placeholder.com/300" alt="">
+            </div>
         </section>
 
     <!-- about --> 
