formatting hero header and hero image using flexbox

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
                 <h1 class="hero-heading">hi, <br> i'm bav kudhail</h1>
                 <p>I design and build things for the web and love what I do.</p>
                 <a href="#contact" class="btn hero-btn">say hello!</a>
-            </div>
-            <div class="hero-image">
-                <img src="https://via.placeholder.com/300" alt="">
+                <img class="hero-image" src="https://via.placeholder.com/200" alt="">
             </div>
         </section>
 
