--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="section hero">
             <div class="hero-container">
                 <h1 class="hero-heading">hi, <br> i'm bav kudhail</h1>
-                <p>I design and build things for the web and love what I do.</p>
+                <p class="hero-text">I design and build things for the web and love what I do.</p>
                 <a href="#contact" class="btn hero-btn">say hello!</a>
                 <img class="hero-image" src="https://via.placeholder.com/200" alt="">
             </div>
