Added further details into about-me-section

--- a/index.html
+++ b/index.html
@@ -28,18 +28,26 @@
                 </ul>
             </nav>
         </header>
+
     <!-- hero -->  
         <section class="section hero">
             <div class="hero-container">
                 <h1 class="hero-heading">hi, <br> i'm bav kudhail</h1>
                 <p class="hero-text">I design and build things for the web and love what I do.</p>
                 <a href="#contact" class="btn hero-btn">say hello!</a>
-                <img class="hero-image" src="https://via.placeholder.com/200" alt="">
+            </div>
+            <div class="image-container">
+            <img class="hero-image" src="https://via.placeholder.com/200" alt="">
             </div>
         </section>
 
     <!-- about --> 
         <section class="section about">
+            <h2 class="heading">about me</h2>
+            <p class="about-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, sapiente.</p>
+            <div class="about-container">
+                
+            </div>
 
         </section>
 
