--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#contact" class="btn hero-btn">say hello!</a>
             </div>
             <div class="image-container">
-            <img class="hero-image" src="https://via.placeholder.com/200" alt="">
+            <img class="hero-image" src="https://via.placeholder.com/200" alt=""> 
             </div>
         </section>
 
@@ -57,7 +57,6 @@
                         provident reprehenderit nulla! Ea sunt excepturi illo rem, perspiciatis, ex architecto eligendi delectus nobis
                         nulla quibusdam vitae obcaecati magni culpa repellendus voluptatum quam eaque adipisci placeat vel? Culpa
                         distinctio ad dicta velit voluptates eligendi ipsum quis delectus dolore!</p>
-                    <a href="#">Resume</a>
                 </div>
                 </div> 
         </section>
@@ -66,8 +65,38 @@
             
 
     <!-- skills/services -->
-        <section class="section skill">
-
+        <section class="skill-section">
+            <h2 class="heading">skills</h2>
+            <div class="skill-container">
+                <div class="card">
+                    <p class="skill">HTML</p>
+                </div>
+            </div>
+            <div class="skill-container">
+                <div class="card">
+                    <p class="skill">CSS</p>
+                </div>
+            </div>
+            <div class="skill-container">
+                <div class="card">
+                    <p class="skill">Javascript</p>
+                </div>
+            </div>
+            <div class="skill-container">
+                <div class="card">
+                    <p class="skill">React</p>
+                </div>
+            </div>
+            <div class="skill-container">
+                <div class="card">
+                    <p class="skill">MongoDB</p>
+                </div>
+            </div>
+            <div class="skill-container">
+                <div class="card">
+                    <p class="skill">And more!</p>
+                </div>
+            </div>
         </section>
 
     <!-- projects -->
