created base css styling for skills section

--- a/index.html
+++ b/index.html
@@ -61,38 +61,28 @@
                 </div> 
         </section>
 
-            
-            
-
     <!-- skills/services -->
-        <section class="skill-section">
-            <h2 class="heading">skills</h2>
+        <section class="section skills">
+            <div class="container">
+                <h2 class="heading">skills</h2>
+                <p>Here are some languages and frameworks I know</p>
+            </div>
             <div class="skill-container">
                 <div class="card">
                     <p class="skill">HTML</p>
                 </div>
-            </div>
-            <div class="skill-container">
                 <div class="card">
                     <p class="skill">CSS</p>
                 </div>
-            </div>
-            <div class="skill-container">
                 <div class="card">
                     <p class="skill">Javascript</p>
                 </div>
-            </div>
-            <div class="skill-container">
                 <div class="card">
                     <p class="skill">React</p>
                 </div>
-            </div>
-            <div class="skill-container">
                 <div class="card">
                     <p class="skill">MongoDB</p>
                 </div>
-            </div>
-            <div class="skill-container">
                 <div class="card">
                     <p class="skill">And more!</p>
                 </div>
