consolidated .section css class

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="section about">
             <div class="container">
                 <h2 class="heading">about me</h2>
-                <p class="about-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, sapiente.</p>
+                <p class="intro-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, sapiente.</p>
             </div>
 
             <div class="about-container">
@@ -65,7 +65,7 @@
         <section class="section skills">
             <div class="container">
                 <h2 class="heading">skills</h2>
-                <p>Here are some languages and frameworks I know</p>
+                <p class="intro-text">Here are some languages and frameworks I know</p>
             </div>
             <div class="skill-container">
                 <div class="card">
@@ -91,7 +91,17 @@
 
     <!-- projects -->
         <section class="section projects">
+            <div class="container">
+                <h2 class="heading">projects</h2>
+                <p class="intro-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, rem.</p>
+            </div>
 
+            <div class="project-container">
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/350" alt="">
+                    <h3 class="project-title">project title</h3>
+                </div>
+            </div>
         </section>
 
     <!-- contact -->   
