added 'more projects' section to html document

--- a/index.html
+++ b/index.html
@@ -101,8 +101,62 @@
                     <img src="https://via.placeholder.com/350" alt="">
                     <h3 class="project-title">project title</h3>
                 </div>
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/350" alt="">
+                    <h3 class="project-title">project title</h3>
+                </div>
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/350" alt="">
+                    <h3 class="project-title">project title</h3>
+                </div>
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/350" alt="">
+                    <h3 class="project-title">project title</h3>
+                </div>
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/350" alt="">
+                    <h3 class="project-title">project title</h3>
+                </div>
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/350" alt="">
+                    <h3 class="project-title">project title</h3>
+                </div>
             </div>
         </section>
+
+        <section class="section">
+            <div class="container">
+                <h3 class="subheading">other projects</h4>
+            </div>
+            <div class="more-project-card">
+                <img src="https://via.placeholder.com/150" alt="">
+                <h3 class="more-project-title">project-title</h3>
+            </div>
+            <div class="more-project-card">
+                <img src="https://via.placeholder.com/150" alt="">
+                <h3 class="more-project-title">project-title</h3>
+            </div>
+            <div class="more-project-card">
+                <img src="https://via.placeholder.com/150" alt="">
+                <h3 class="more-project-title">project-title</h3>
+            </div>
+            <div class="more-project-card">
+                <img src="https://via.placeholder.com/150" alt="">
+                <h3 class="more-project-title">project-title</h3>
+            </div>
+            <div class="more-project-card">
+                <img src="https://via.placeholder.com/150" alt="">
+                <h3 class="more-project-title">project-title</h3>
+            </div>
+            <div class="more-project-card">
+                <img src="https://via.placeholder.com/150" alt="">
+                <h3 class="more-project-title">project-title</h3>
+            </div>
+            <div>
+                <button class="more-btn">show more</button>
+            </div>
+        </section>
+
 
     <!-- contact -->   
         <section class=" section contact">
