added 'contact' section to html file

--- a/index.html
+++ b/index.html
@@ -155,8 +155,11 @@
 
 
     <!-- contact -->   
-        <section class=" section contact">
-
+        <section class=" section contact"> 
+            <div class="container">
+                <h2 class="heading">get in touch</h2>
+                <p class="intro-text">I am always open to design and development opportunities.</p>
+            </div>
         </section>
 
     <!-- footer -->
