added css styling to contact me section

--- a/index.html
+++ b/index.html
@@ -155,13 +155,27 @@
 
 
     <!-- contact -->   
-        <section class=" section contact"> 
+        <section class=" section"> 
             <div class="container">
-                <h2 class="heading">get in touch</h2>
+                <h2 class="heading">say hello</h2>
                 <p class="intro-text">I am always open to design and development opportunities.</p>
             </div>
+            <div class="contact-form">
+                <div class="name">
+                    <input type="text" placeholder="first name">
+                </div>
+                <div class="name">
+                    <input type="text" placeholder="last name">
+                </div>
+                <input type="email" name="" id="" placeholder="email">
+                <textarea class="message" placeholder="message"></textarea>
+                <button class="contact-btn">send message!</button>
+            </div>            
         </section>
 
+
+
+        
     <!-- footer -->
         <footer class="section footer">
 
