added footer section to html doc and created social links

--- a/index.html
+++ b/index.html
@@ -178,7 +178,13 @@
         
     <!-- footer -->
         <footer class="section footer">
-
+            <div class="social-bar">
+                <a href="#">fb</a>
+                <a href="#">ins</a>
+                <a href="#">tw</a>
+                <a href="#">ins</a>
+                <a href="#">oth</a>
+            </div>
         </footer>
 </body>
 </html>
