created css styling for  .social-icons class

--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
         
     <!-- footer -->
         <footer class="section footer">
-            <div class="social-bar">
-                <a href="#">fb</a>
-                <a href="#">ins</a>
+            <div class="social-icons">
+                <a href=""><i class="fab fa-github"></i></a>
+                <a href="#"><span><i class="fab fa-github"></i></span></a>
                 <a href="#">tw</a>
                 <a href="#">ins</a>
                 <a href="#">oth</a>
