adjused section height to be 100vh - nav-height

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
         
     <!-- footer -->
-        <footer class="section footer">
+        <footer class="footer">
             <div class="social-icons">
                 <a href=""><i class="fab fa-github"></i></a>
                 <a href="#"><span><i class="fab fa-github"></i></span></a>
