--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     </li>
                 </ul>
             </nav>
+            <button class="hamburger">
+                <span class="menu"></span>
+            </button>
         </header>
 
     <!-- hero -->  
