added transform to hamburger menu to create an 'X' shape

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="#" class="nav-link">contact</a>
                     </li>
                 </ul>
-                <button class="hamburger">
+                <button class="hamburger active">
                     <span class="menu"></span>
                 </button>
             </nav>
@@ -42,7 +42,7 @@
 
 
 
-        
+
     <!-- hero -->  
         <section class="section hero">
             <div class="hero-container">
