adjusted transform to hamburger menu and added javascript interactivity

--- a/index.html
+++ b/index.html
@@ -200,5 +200,6 @@
                 <a href="#">oth</a>
             </div>
         </footer>
+        <script src="./assets/app.js"></script>
 </body>
 </html>
