added mobile navigation menu in html and css, added javascript to toggle menu visibility and button interactivity

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <header>
             <nav class="navbar">
                 <h1 id="logo">b</h1>
-                <ul class="nav-container">
+                <button class="hamburger active">
+                    <span class="menu"></span>
+                </button>
+                <ul class="nav-container visible">
                     <li class="nav-item">
                         <a href="#" class="nav-link">home</a>
                     </li>
@@ -26,9 +29,6 @@
                         <a href="#" class="nav-link">contact</a>
                     </li>
                 </ul>
-                <button class="hamburger active">
-                    <span class="menu"></span>
-                </button>
             </nav>
         </header>
 
