created a new html file in order to experiment with alternative styling

--- a/index.html
+++ b/index.html
@@ -34,38 +34,19 @@
             
 
         </header>
-
     <!-- hero section -->  
-        <section class="section" id="hero">
+        <section class="section hero" id="hero">
             <div class="hero-container">
                 <img class="hero-avatar" src="./assets/images/avatar_image_square.png" alt="">
-                <h1 class="hero-heading">hi, <br> i'm bav kudhail</h1>
+                <h1 class="hero-heading">hi, <br> i'm <span class="accent-text"> bav kudhail</span></h1>
                 <p class="hero-text">I design and build things for the web and love what I do.</p>
                 <a href="#contact" class="btn hero-btn">say hello!</a>
             </div>
-                <div class="socials">
-                    <div>TW</div>
-                    <div>Li</div>
-                    <div>GH</div>
-                </div>
         </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- about --> 
-        <section class="section" id="about">
+    <!-- about section --> 
+        <section class="section about" id="about">
             <div class="container">
                 <h2 class="heading">about me</h2>
                 <p class="intro-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, sapiente.</p>
@@ -73,7 +54,7 @@
 
             <div class="about-container">
                 <div class="left">
-                    <img class="about-image" src="https://via.placeholder.com/200" alt="">
+                    <img class="about-image" src="./assets/images/about-me-image.jpg" alt="">
                 </div>
                 <div class="right">
                     <p class="about-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat blanditiis perferendis tempora
@@ -84,7 +65,19 @@
                 </div> 
         </section>
 
-    <!-- skills/services -->
+        <section class="about-section">
+            <div class="info">
+                <h2 class="about-heading">About me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam odit voluptatum esse nam quo nesciunt eveniet illum velit expedita adipisci.</p>
+            </div>
+            <div class="about-img-container">
+                <img class="about-img" src="./assets/images/about-me-image.jpg" alt="">
+            </div>
+        </section>
+
+
+        
+    <!-- skills section -->
         <section class="section">
             <div class="container">
                 <h2 class="heading">skills</h2>
@@ -113,7 +106,7 @@
             </div>
         </section>
 
-    <!-- projects -->
+    <!-- project section -->
         <section class="section" id="projects">
             <div class="container">
                 <h2 class="heading">projects</h2>
@@ -182,7 +175,7 @@
                 </div> 
         </section>
 
-    <!-- contact -->   
+    <!-- contact section -->   
         <section class=" section"> 
             <div class="container">
                 <h2 class="heading">say hello</h2>
@@ -224,7 +217,7 @@
 
 
 
-
+        <!-- javascript link -->
         <script src="./assets/app.js"></script>
 </body>
 </html>
