--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <!-- header -->
         <nav class="navbar">
             <div class="logo">B</div>
-            <ul id="nav-list">
+            <button class="hamburger-btn active">
+                <span class="menu"></span>
+            </button>
+            <ul class="nav-container" id="nav-list">
                 <li> <a href="#home">Home</a></li>
                 <li> <a href="#about">About</a></li>
                 <li> <a href="#projects">Projects</a></li>
