added project 2 to html doc

--- a/index.html
+++ b/index.html
@@ -118,12 +118,26 @@
             <h2 class="sub-heading">Projects</h2>
             <p class="section-intro">Here are some of the things I have built!.</p>
             <div class="project-container">
+                <div class="project-card larger">
+                    <img class="project-image-large" src="./assets/images/bav-kudhail-portfolio.png" alt="project one image">
+                    <div class="project-information">
+                        <h3>My Portfolio!</h3>
+                        <p class="subtext">I know! Portfolio-ception 😲 The goal for this project was to produce a portfolio using the skills I have learned thus far, html and css (I cheekily added a bit of javascript) that would satisfy the requirements of a hiring manager</p>
+                        <hr>
+                        <div class="project-links">
+                            <p class="subtext"><a class="project-link" target="blank" href="https://bavkudhail.github.io/horiseon-refactor/">Deploy
+                                    Here</a></p>
+                            <p class="subtext"><a class="project-link" target="blank" href="https://github.com/BavKudhail/advanced-css-portfolio"> View
+                                    Source Code</a></p>
+                        </div>
+                    </div>
+                </div>
                 <div class="project-card large">
                     <img class="project-image-large" src="./assets/images/horeison-refactor.png" alt="project one image">
                     <div class="project-information">
                         <h3>horiseon-refactor</h3>
-                        <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima aut ex enim, sunt
-                            voluptatibus impedit.</p>
+                        <p class="subtext">Refactoring code for a marketing agency so that the codebase follows accessibility standards and is optimised for search
+                        engines.</p>
                         <hr>
                         <div class="project-links">
                             <p class="subtext"><a class="project-link" target="blank" href="https://bavkudhail.github.io/horiseon-refactor/">Deploy
@@ -133,6 +147,10 @@
                         </div>
                     </div>
                 </div>
+            
+
+
+
                 <div class="project-card">
                     <img class="project-image" src="https://picsum.photos/300" alt="project one image">
                     <div class="project-information">
@@ -144,6 +162,7 @@
                         <p class="subtext"><a class="project-link" href="https://github.com/BavKudhail/">View here</a></p>
                     </div>
                 </div>
+
                 <div class="project-card">
                     <img class="project-image" src="https://picsum.photos/300" alt="project one image">
                     <div class="project-information">
@@ -155,6 +174,7 @@
                         <p class="subtext"><a class="project-link" href="https://github.com/BavKudhail/">View here</a></p>
                     </div>
                 </div>
+
                 <div class="project-card">
                     <img class="project-image" src="https://picsum.photos/300" alt="project one image">
                     <div class="project-information">
@@ -166,6 +186,7 @@
                         <p class="subtext"><a class="project-link" href="https://github.com/BavKudhail/">View here</a></p>
                     </div>
                 </div>
+
                 <div class="project-card">
                     <img class="project-image" src="https://picsum.photos/300" alt="project one image">
                     <div class="project-information">
@@ -177,7 +198,7 @@
                         <p class="subtext"><a class="project-link" href="https://github.com/BavKudhail/">View here</a></p>
                     </div>
                 </div>
-                </div>
+
                 
             </div>
         </section>
