--- a/index.html
+++ b/index.html
@@ -35,14 +35,8 @@
                     <img class="hero-avatar" src="./assets/images/avatar_image_square.png" alt="hero-image avatar">
                 </div>
                 <div class="socials">
-                        <a href="https://uk.linkedin.com" target="blank" class="social">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="#eb59a7" width="40" height="24" viewBox="0 0 24 24">
-                                <path
-                                    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
-                            </svg>
-                        </a>
                     <div>
-                        <a href="https://www.github.com" target="blank" class="social">
+                        <a href="https://github.com/BavKudhail" target="blank" class="social">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="#eb59a7" width="40" height="24" viewBox="0 0 24 24">
                                 <path
                                     d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
@@ -77,7 +71,6 @@
             </div>
         </section>
 
-
     <!-- skills section -->
         <section class="sub-section-alt accent-section">
             <div class="information">
@@ -86,7 +79,7 @@
             </div>
             <div class="skill-container">
                 <div class="skill-card">
-                    <img class="skill-img" src="./assets/images/skills_icon.png" alt="">
+                    <img class="skill-img" src="./assets/images/character illustration.jpg" alt="">
                     <p>HTML</p>
                 </div>
                 <div class="skill-card">
@@ -103,7 +96,7 @@
                 </div>
                 <div class="skill-card">
                     <img class="skill-img" src="./assets/images/skills_icon.png" alt="">
-                    <p>React</p>
+                    <p>Node.JS</p>
                 </div>
                 <div class="skill-card">
                     <img class="skill-img" src="./assets/images/skills_icon.png" alt="">
@@ -121,11 +114,11 @@
                 <div class="project-card larger">
                     <img class="project-image-large" src="./assets/images/bav-kudhail-portfolio.png" alt="project one image">
                     <div class="project-information">
-                        <h3>My Portfolio!</h3>
-                        <p class="subtext">I know! Portfolio-ception 😲 The goal for this project was to produce a portfolio using the skills I have learned thus far, html and css (I cheekily added a bit of javascript) that would satisfy the requirements of a hiring manager</p>
+                        <h3>My First Portfolio!</h3>
+                        <p class="subtext">I know! Portfolio-ception 😲 The goal for this project was to produce a portfolio using the skills I have learned thus far, html and css (I cheekily added a bit of javascript to learn more) that would satisfy the requirements of a hiring manager</p>
                         <hr>
                         <div class="project-links">
-                            <p class="subtext"><a class="project-link" target="blank" href="https://bavkudhail.github.io/horiseon-refactor/">Deploy
+                            <p class="subtext"><a class="project-link" target="blank" href="https://bavkudhail.github.io/advanced-css-portfolio/">Deploy
                                     Here</a></p>
                             <p class="subtext"><a class="project-link" target="blank" href="https://github.com/BavKudhail/advanced-css-portfolio"> View
                                     Source Code</a></p>
@@ -166,7 +159,7 @@
                 <div class="project-card">
                     <img class="project-image" src="https://picsum.photos/300" alt="project one image">
                     <div class="project-information">
-                        <h3>Project Two</h3>
+                        <h3>Project Title</h3>
                         <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima aut ex enim, sunt
                             voluptatibus
                             impedit.</p>
@@ -178,7 +171,7 @@
                 <div class="project-card">
                     <img class="project-image" src="https://picsum.photos/300" alt="project one image">
                     <div class="project-information">
-                        <h3>Project Two</h3>
+                        <h3>Project Title</h3>
                         <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima aut ex enim, sunt
                             voluptatibus
                             impedit.</p>
@@ -190,7 +183,7 @@
                 <div class="project-card">
                     <img class="project-image" src="https://picsum.photos/300" alt="project one image">
                     <div class="project-information">
-                        <h3>Project Two</h3>
+                        <h3>Project Title</h3>
                         <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima aut ex enim, sunt
                             voluptatibus
                             impedit.</p>
@@ -216,6 +209,15 @@
                     <button class="btn">send</button>
                 </div>
         </section>
+<!-- form -->
+<form action="https://formsubmit.co/bavkudhail@email.com" method="POST">
+    <input type="text" placeholder="Name" >
+    <input type="hidden" name="_subject" value="New submission!">
+    <input type="email" name="email" placeholder="Email Address" required>
+    <input type="hidden" name="_next" value="https://https://bavkudhail.github.io/advanced-css-portfolio/thankyou.html">
+    <input type="text" name="name" placeholder="Message" required>
+    <button type="submit">Send</button>
+</form>
 
     <!-- footer -->
         <footer class="footer">
