corrected email on form

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 </div>
         </section>
 <!-- form -->
-<form action="https://formsubmit.co/bavkudhail@email.com" method="POST">
+<form action="https://formsubmit.co/bavkudhail@gmail.com" method="POST">
     <input type="text" placeholder="Name" >
     <input type="hidden" name="_subject" value="New submission!">
     <input type="email" name="email" placeholder="Email Address" required>
