--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <input type="text" placeholder="Name" >
     <input type="hidden" name="_subject" value="New submission!">
     <input type="email" name="email" placeholder="Email Address" required>
-    <input type="hidden" name="_next" value="https://https://bavkudhail.github.io/advanced-css-portfolio/thankyou.html">
+    <input type="hidden" name="_next" value="https://https://bavkudhail.github.io/advanced-css-portfolio/thankyou">
     <input type="text" name="name" placeholder="Message" required>
     <button type="submit">Send</button>
 </form>
