debugging thank you page and testing it via github pages

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li> <a href="#about">About</a></li>
                 <li> <a href="#projects">Projects</a></li>
                 <li> <a href="#contact">contact</a></li>
+                <li> <a href="./pages/thankyou.html" target="blank" >thank you</a></li>
             </ul>
         </nav>
 
@@ -211,10 +212,11 @@
         </section>
 <!-- form -->
 <form action="https://formsubmit.co/bavkudhail@gmail.com" method="POST">
+    <input type="hidden" name="_captcha" value="false">
     <input type="text" placeholder="Name" >
     <input type="hidden" name="_subject" value="New submission!">
     <input type="email" name="email" placeholder="Email Address" required>
-    <input type="hidden" name="_next" value="https://https://bavkudhail.github.io/advanced-css-portfolio/thankyou">
+    <input type="hidden" name="_next" value="">
     <input type="text" name="name" placeholder="Message" required>
     <button type="submit">Send</button>
 </form>
