--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <li> <a href="#about">About</a></li>
                 <li> <a href="#projects">Projects</a></li>
                 <li> <a href="#contact">contact</a></li>
-                <li> <a href="./pages/thankyou.html" target="blank" >thank you</a></li>
             </ul>
         </nav>
 
@@ -216,7 +215,7 @@
     <input type="text" placeholder="Name" >
     <input type="hidden" name="_subject" value="New submission!">
     <input type="email" name="email" placeholder="Email Address" required>
-    <input type="hidden" name="_next" value="">
+    <input type="hidden" name="_next" value="https://bavkudhail.github.io/advanced-css-portfolio/pages/thankyou.html">
     <input type="text" name="name" placeholder="Message" required>
     <button type="submit">Send</button>
 </form>
