added alt attributes to all img files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-
     <!-- header -->
         <nav class="navbar">
             <div class="logo">B</div>
@@ -79,27 +78,27 @@
             </div>
             <div class="skill-container">
                 <div class="skill-card">
-                    <img class="skill-img" src="./assets/images/character illustration.jpg" alt="">
+                    <img class="skill-img" src="./assets/images/character illustration.jpg" alt="html-illustration">
                     <p>HTML</p>
                 </div>
                 <div class="skill-card">
-                    <img class="skill-img" src="./assets/images/skills_icon.png" alt="">
+                    <img class="skill-img" src="./assets/images/css_illustration.JPG" alt="css-illustration">
                     <p>CSS</p>
                 </div>
                 <div class="skill-card">
-                    <img class="skill-img" src="./assets/images/skills_icon.png" alt="">
+                    <img class="skill-img" src="./assets/images/javascript illustration.JPG" alt="javascript-illustration">
                     <p>Javascript</p>
                 </div>
                 <div class="skill-card">
-                    <img class="skill-img" src="./assets/images/skills_icon.png" alt="">
+                    <img class="skill-img" src="./assets/images/react illustration.JPG" alt="react-illustration">
                     <p>React</p>
                 </div>
                 <div class="skill-card">
-                    <img class="skill-img" src="./assets/images/skills_icon.png" alt="">
+                    <img class="skill-img" src="./assets/images/skills_icon.png" alt="placeholder-illustration">
                     <p>Node.JS</p>
                 </div>
                 <div class="skill-card">
-                    <img class="skill-img" src="./assets/images/skills_icon.png" alt="">
+                    <img class="skill-img" src="./assets/images/skills_icon.png" alt="placeholder-illustration">
                     <p>And more!</p>
                 </div>
             </div>
@@ -112,7 +111,7 @@
             <p class="section-intro">Here are some of the things I have built!.</p>
             <div class="project-container">
                 <div class="project-card larger">
-                    <img class="project-image-large" src="./assets/images/bav-kudhail-portfolio.png" alt="project one image">
+                    <img class="project-image-large" src="./assets/images/bav-kudhail-portfolio.png" alt="bav kudhail first portfolio screenshot">
                     <div class="project-information">
                         <h3>My First Portfolio!</h3>
                         <p class="subtext">I know! Portfolio-ception 😲 The goal for this project was to produce a portfolio using the skills I have learned thus far, html and css (I cheekily added a bit of javascript to learn more) that would satisfy the requirements of a hiring manager</p>
@@ -126,7 +125,7 @@
                     </div>
                 </div>
                 <div class="project-card large">
-                    <img class="project-image-large" src="./assets/images/horeison-refactor.png" alt="project one image">
+                    <img class="project-image-large" src="./assets/images/horeison-refactor.png" alt="project two screenshot">
                     <div class="project-information">
                         <h3>horiseon-refactor</h3>
                         <p class="subtext">Refactoring code for a marketing agency so that the codebase follows accessibility standards and is optimised for search
@@ -145,7 +144,7 @@
 
 
                 <div class="project-card">
-                    <img class="project-image" src="https://picsum.photos/300" alt="project one image">
+                    <img class="project-image" src="https://picsum.photos/300" alt="placeholder project image">
                     <div class="project-information">
                         <h3>Project Two</h3>
                         <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima aut ex enim, sunt
@@ -157,7 +156,7 @@
                 </div>
 
                 <div class="project-card">
-                    <img class="project-image" src="https://picsum.photos/300" alt="project one image">
+                    <img class="project-image" src="https://picsum.photos/300" alt="placeholder project image">
                     <div class="project-information">
                         <h3>Project Title</h3>
                         <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima aut ex enim, sunt
@@ -169,7 +168,7 @@
                 </div>
 
                 <div class="project-card">
-                    <img class="project-image" src="https://picsum.photos/300" alt="project one image">
+                    <img class="project-image" src="https://picsum.photos/300" alt="placeholder project image">
                     <div class="project-information">
                         <h3>Project Title</h3>
                         <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima aut ex enim, sunt
@@ -181,7 +180,7 @@
                 </div>
 
                 <div class="project-card">
-                    <img class="project-image" src="https://picsum.photos/300" alt="project one image">
+                    <img class="project-image" src="https://picsum.photos/300" alt="placeholder project image">
                     <div class="project-information">
                         <h3>Project Title</h3>
                         <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima aut ex enim, sunt
@@ -191,34 +190,25 @@
                         <p class="subtext"><a class="project-link" href="https://github.com/BavKudhail/">View here</a></p>
                     </div>
                 </div>
-
-                
             </div>
         </section>
 
     <!-- contact section -->   
-        <section class="sub-section-alt">
-            <h4 class="sub-heading">say hello</h2>
-                <p class="intro-text">I am always open to design and development opportunities.</p>
-                <div class="contact-form" id="contact">
-                    <div class="name">
-                        <input type="text" placeholder="Name">
-                    </div>
-                    <input type="email" name="" id="" placeholder="email">
-                    <textarea class="message" placeholder="message"></textarea>
-                    <button class="btn">send</button>
-                </div>
-        </section>
+ 
 <!-- form -->
-<form action="https://formsubmit.co/bavkudhail@gmail.com" method="POST">
-    <input type="hidden" name="_captcha" value="false">
-    <input type="text" placeholder="Name" >
-    <input type="hidden" name="_subject" value="New submission!">
-    <input type="email" name="email" placeholder="Email Address" required>
-    <input type="hidden" name="_next" value="https://bavkudhail.github.io/advanced-css-portfolio/pages/thankyou.html">
-    <input type="text" name="name" placeholder="Message" required>
-    <button type="submit">Send</button>
-</form>
+<section class="sub-section-alt">
+    <h4 class="sub-heading">say hello</h4>
+    <p class="intro-text">I am always open to design and development opportunities.</p>
+    <form class="contact-form" action="https://formsubmit.co/bavkudhail@gmail.com" method="POST">
+        <input type="hidden" name="_captcha" value="false">
+        <input type="text" placeholder="Name">
+        <input type="hidden" name="_subject" value="New submission!">
+        <input type="email" name="email" placeholder="Email Address" required>
+        <input type="hidden" name="_next" target="blank" value="https://bavkudhail.github.io/advanced-css-portfolio/pages/thankyou.html">
+        <input type="text" name="name" class="message" placeholder="Message" required>
+        <button class="btn" type="submit">Send</button>
+    </form>
+</section>
 
     <!-- footer -->
         <footer class="footer">
