--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You</title>
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
-    <h1>Thank You!</h1>
+    <section class="thankyou-page">
+        <h1>Thank You!</h1>
+    </section>
 </body>
 </html>
