nested img tags witin a tags, now images are clickable and linked to URL

--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
             <p class="section-intro">Here are some of the things I have built!.</p>
             <div class="project-container">
                 <div class="project-card larger">
-                    <img class="project-image-large" src="./assets/images/bav-kudhail-portfolio.png" alt="bav kudhail first portfolio screenshot">
+                    <a target="blank" href="https://bavkudhail.github.io/advanced-css-portfolio/">
+                        <img class="project-image-large" src="./assets/images/bav-kudhail-portfolio.png"
+                            alt="bav kudhail first portfolio screenshot">
+                    </a>
                     <div class="project-information">
                         <h3>My First Portfolio!</h3>
                         <p class="subtext">I know! Portfolio-ception 😲 The goal for this project was to produce a portfolio using the skills I have learned thus far, html and css (I cheekily added a bit of javascript to learn more) that would satisfy the requirements of a hiring manager</p>
@@ -127,7 +130,9 @@
                     </div>
                 </div>
                 <div class="project-card large">
-                    <img class="project-image-large" src="./assets/images/horeison-refactor.png" alt="project two screenshot">
+                    <a href="https://bavkudhail.github.io/horiseon-refactor/" target="blank">
+                        <img class="project-image-large" src="./assets/images/horeison-refactor.png" alt="project two screenshot">
+                    </a>
                     <div class="project-information">
                         <h3>horiseon-refactor</h3>
                         <p class="subtext">Refactoring code for a marketing agency so that the codebase follows accessibility standards and is optimised for search
